--- a/index.html
+++ b/index.html
@@ -86,20 +86,46 @@
       
       <!-- Breakfast Menu -->
       <h3 style="color: #6b4f31; font-size: 24px; margin: 30px 0 15px;">Breakfast</h3>
-      <table style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
-        <tr>
-          <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Item</th>
-          <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Price</th>
-        </tr>
-        <tr style="transition: background-color 0.3s;">
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Pancakes</td>
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 599</td>
-        </tr>
-        <tr style="transition: background-color 0.3s;">
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">French Toast</td>
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 679</td>
-        </tr>
-      </table>
+<table style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
+  <tr>
+    <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Item</th>
+    <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Price</th>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Pancakes</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 599</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">French Toast</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 679</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Omelette</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 499</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Waffles</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 650</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Scrambled Eggs & Toast</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 550</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Fruit Parfait</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 700</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Meat Pie(Chicken/Beef)</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 250</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Sausage Roll</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 150</td>
+  </tr>
+  
+</table>
+
 
       <!-- Lunch Menu -->
       <h3 style="color: #6b4f31; font-size: 24px; margin: 30px 0 15px;">Lunch</h3>
@@ -120,28 +146,111 @@
           <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Caesar Salad</td>
           <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 600</td>
         </tr>
+        <tr style="transition: background-color 0.3s;">
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Grilled Fish with Rice</td>
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 950</td>
+        </tr>
+        <tr style="transition: background-color 0.3s;">
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Spaghetti Bolognese</td>
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 850</td>
+        </tr>
+        <tr style="transition: background-color 0.3s;">
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Beef Stir Fry with Noodles</td>
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 900</td>
+        </tr>
+        <tr style="transition: background-color 0.3s;">
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Vegetable Fried Rice</td>
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 750</td>
+        </tr>
+        <tr style="transition: background-color 0.3s;">
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">BBQ Chicken Wrap</td>
+          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 880</td>
+        </tr>
       </table>
+
+      <h3 style="color: #6b4f31; font-size: 24px; margin: 30px 0 15px;">Dinner</h3>
+<table style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
+  <tr>
+    <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Item</th>
+    <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Price</th>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Grilled Steak with Mashed Potatoes</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 1,200</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Creamy Mushroom Chicken</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 1,050</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Baked Salmon with Lemon Butter Sauce</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 1,350</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Garlic Butter Shrimp Pasta</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 980</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Vegetable Stir Fry with Tofu</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 800</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Lamb Chops with Roasted Vegetables</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 1,500</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Stuffed Bell Peppers</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 850</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Classic Beef Stroganoff</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 1,100</td>
+  </tr>
+</table>
+
+      
 
       <!-- Drinks Menu -->
       <h3 style="color: #6b4f31; font-size: 24px; margin: 30px 0 15px;">Drinks</h3>
-      <table style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
-        <tr>
-          <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Item</th>
-          <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Price</th>
-        </tr>
-        <tr style="transition: background-color 0.3s;">
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Fresh Lemonade</td>
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 200.99</td>
-        </tr>
-        <tr style="transition: background-color 0.3s;">
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Cold Brew Coffee</td>
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 300.49</td>
-        </tr>
-        <tr style="transition: background-color 0.3s;">
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Green Tea</td>
-          <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 100</td>
-        </tr>
-      </table>
+<table style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
+  <tr>
+    <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Item</th>
+    <th style="padding: 15px; text-align: left; border: 1px solid #ddd; background-color: #f6c87c; color: white;">Price</th>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Fresh Lemonade</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 200</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Cold Brew Coffee</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 300</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Green Tea</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 100</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Mango Smoothie</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 400</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Iced Mocha</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 450</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Pineapple Mint Juice</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 350</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Hot Chocolate</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 500</td>
+  </tr>
+  <tr style="transition: background-color 0.3s;">
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Strawberry Milkshake</td>
+    <td style="padding: 15px; text-align: left; border: 1px solid #ddd;">Ksh 480</td>
+  </tr>
+</table>
+
     </section>
 
     <!-- Contact Section -->
@@ -156,12 +265,12 @@
         <!-- Email -->
         <div style="flex: 1; margin: 20px; text-align: center;">
           <i class="fas fa-envelope" style="font-size: 40px; color: #f6c87c; margin-bottom: 10px;"></i>
-          <p style="font-size: 18px; color: #5a4e43;"><a href="mailto:sunrisecafe@gmail.com" style="color: #5a4e43; text-decoration: none;">sunrisecafe@gmail.com</a></p>
+          <p style="font-size: 18px; color: #5a4e43;"><a href="https://support.google.com/mail/answer/8494?hl=en-IN&co=GENIE.Platform%3DDesktop" style="color: #5a4e43; text-decoration: none;">sunrisecafe@gmail.com</a></p>
         </div>
         <!-- Address -->
         <div style="flex: 1; margin: 20px; text-align: center;">
           <i class="fas fa-map-marker-alt" style="font-size: 40px; color: #f6c87c; margin-bottom: 10px;"></i>
-          <p style="font-size: 18px; color: #5a4e43;">Nairobi</p>
+          <p style="font-size: 18px; color: #5a4e43;">Nairobi, Kenya</p>
         </div>
       </div>
 
